--- a/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
@@ -1235,7 +1235,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\cpython\Modules\posixmodule.c"
+				RelativePath="..\Modules\posixmodule.c"
 				>
 			</File>
 			<File
