--- a/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
@@ -607,6 +607,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\cpython\Modules\expat\loadlibrary.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\cpython\Modules\expat\xmlparse.c"
 				>
 			</File>
