--- a/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -108,7 +108,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -173,7 +173,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -239,7 +239,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -304,7 +304,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -367,7 +367,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -430,7 +430,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -493,7 +493,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\cpython\Modules\expat"
-				PreprocessorDefinitions="XML_NS;XML_DTD;BYTEORDER=1234;XML_CONTEXT_BYTES=1024;_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC;HAVE_MEMMOVE"
+				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS;USE_PYEXPAT_CAPI;XML_STATIC"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
