--- a/vstudio/PCbuild.vs2008/pyexpat.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pyexpat.VS2008.vcproj
@@ -547,6 +547,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\cpython\Modules\expat\loadlibrary.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\cpython\Modules\expat\xmlparse.c"
 				>
 			</File>
@@ -555,7 +559,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\cpython\Modules\expat\xmltok.c"
+				RelativePath="..\Modules\expat\xmltok.c"
 				>
 			</File>
 		</Filter>
