--- a/vstudio/PCbuild.vs2008/_testembed.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_testembed.VS2008.vcproj
@@ -559,7 +559,7 @@
 			Name="Source Files"
 			>
 			<File
-				RelativePath="..\..\cpython\Programs\_testembed.c"
+				RelativePath="..\Programs\_testembed.c"
 				>
 			</File>
 		</Filter>
