--- a/vstudio/PCbuild.vs2008/pyexpat.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pyexpat.VS2008.vcproj
@@ -559,7 +559,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Modules\expat\xmltok.c"
+				RelativePath="..\..\cpython\Modules\expat\xmltok.c"
 				>
 			</File>
 		</Filter>
