--- a/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
@@ -1271,7 +1271,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\cpython\Modules\_csv.c"
+				RelativePath="..\Modules\_csv.c"
 				>
 			</File>
 			<File
