--- a/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_elementtree.VS2008.vcproj
@@ -611,7 +611,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\Modules\expat\xmltok.c"
+				RelativePath="..\..\cpython\Modules\expat\xmltok.c"
 				>
 			</File>
 		</Filter>
